Fixed index page alignements

--- a/index/index.css
+++ b/index/index.css
@@ -13,8 +13,8 @@ h1{
     color: white;
     float: left;
     margin: 0;
-    margin-left: 31%;
-    margin-top: 20%;
+    margin-left: 34%;
+    margin-top: 15%;
     padding-right: 0.5%;
 }
 
@@ -24,7 +24,7 @@ img{
     position: relative;
     margin: 0;
     margin-right: 29%;
-    margin-top: 20%;
+    margin-top: 15%;
     padding-top: 0.5%;
 }
 
@@ -33,7 +33,7 @@ p{
     font-size: 25px;
     color: white;
     text-align: center;
-    padding-top: 3%;
+    padding-top: 7%;
 }
 
 .buttonDiv{
